static/css/base.css
:root {
  --main-color: #458f5f;
  --secondary-color: #3f596e;
  --third-color: #f4eddd;
  --fourth-color: #867b6c;
  --extra-color: #e4c301;
}

/* Keep footer at bottom */
#page-container {
    position: relative;
    min-height: calc(100vh - 64px);
}
  
#content-wrap {
    padding-bottom: 135px;    /* Footer height */
}
  
.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 135px;            /* Footer height */
}

/* keep footer at bottom */

html {
    height: 100%;
}

body {
    font-family: Arial, Helvetica, sans-serif;
}

a {
    color: black;
}
a:hover {
    text-decoration: none;
}

.bg-yellow {
    background-color: var(--extra-color);
}
.bg-white {
    background-color: white;
}
.bg-green {
    background-color: var(--main-color);
}
.text-blue {
    color: #007bff;
}
/* nav bar */
.main-nav-link {
    padding: 20px 20px;
    font-weight: 500;
}

.main-nav-link:hover {
    color: var(--secondary-color);
}

/* dropdown */
.border-black {
    border-color: black;
}

/* buttons */
.btn-main {
    background-color: var(--secondary-color);
    color: var(--third-color);
}
.btn-main:hover {
    background-color: var(--main-color);
    color: var(--third-color);
}

.btn-grey {
    background-color: var(--third-color);
    color: black;
}

.btn-info {
    background-color: var(--extra-color);
    color: black !important;
    border-color: var(--extra-color);
}

.btn-info:hover {
    background-color: var(--main-color);
    color: white !important;
    border-color: var(--main-color);
}

.badge-green {
    background-color: var(--main-color);
    color: white;
}
.badge-yellow {
    background-color: var(--extra-color);
    color: black;
}
.badge-yellow a:hover {
    color: black;
}
.badge-blue {
    background-color: var(--secondary-color);
    color: white;
}
.btn-outline-black {
    background: white;
    color: black !important; /* use important to override link colors for <a> elements */
    border: 1px solid black;
}
.decrement-qty:disabled {
    background-color: var(--third-color);
    border-color: var(--third-color);
}
.increment-qty:disabled {
    background-color: var(--third-color);
    border-color: var(--third-color);
}

.btt-button {
    height: 42px;
    width: 42px;
    position: fixed;
    bottom: 10px;
    right: 10px;
}
.btn-words {
    background-color: white;
    border-color: white;
    color: red;
    border-style: none;
}

.btt-link,
.update-link,
.remove-item,
.remove-lesson {
    cursor: pointer;
}

input[name='q']::placeholder {
    color: #aab7c4;
}

/* containers */
.container-shop {
    padding: 40px;
    background-color: var(--secondary-color);
}

.container-about {
    margin-bottom: 25px;
}
.container-lessons {
    background-color: var(--main-color);
    padding: 35px;
}
.container-map {
    padding: 25px;
}
.container-map img {
    height: 300px;
}
.header-margin {
    margin-top: 75px;
}

/* toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

/* jumbotron */
.jumbotron {
    background: url('/media/homepage_background.jpg') no-repeat center center fixed;
    background-size: cover;
    /* margin-top: 72px; */
    color: var(--extra-color);
    padding-top: 80px;
}

.jumbotron hr {
    background-color: var(--third-color);
}

/* coach & coaches page */
.fa-star {
    color: var(--extra-color);
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* footer */

.social-links {
    padding-left: 2em;
    font-size: 1.5rem;
    margin-top: 10px;
}

/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}
@media (min-width: 768px){
    .allauth-form-inner-content {
        height: calc(100vh - 220px);
    }
}
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .jumbotron {
        padding-top: 170px;
    }
    
    .header-margin {
        margin-top: 145px !important;
    }
    /* keep footer at bottom */
    #page-container {
        position: relative;
        min-height: calc(100vh - 132px);
    }
      
    #content-wrap {
        padding-bottom: 135px;    /* Footer height */
    }
      
    .footer {
        position: absolute;
        bottom: 0;
        width: 100%;
        height: 135px;            /* Footer height */
    }
    /* keep footer at bottom */
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    body {
        height: calc(100vh - 116px);
    }
    .allauth-form-inner-content {
        margin-top: 80px;
    }
}

/* Allauth form formatting */

.allauth-form-inner-content p {
    margin-top: 1.5rem;
    color: #000;
}

.allauth-form-inner-content input {
    border-color: #000;
    border-radius: 0;
}

.allauth-form-inner-content label:not([for='id_remember']) {
    display: none;
}

.allauth-form-inner-content input::placeholder {
    color: #aab7c4;
}

.allauth-form-inner-content button,
.allauth-form-inner-content input[type='submit'] {
	/* btn */
	display: inline-block;
    font-weight: 400;
    color: #fff;
    text-align: center;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background-color: var(--main-color);
    border: 1px solid var(--main-color);
    padding: .375rem .75rem;
    font-size: 1rem;
    line-height: 1.5;

    /* standard bootstrap btn transitions */
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
}

.allauth-form-inner-content button:hover,
.allauth-form-inner-content input[type='submit']:hover {	
	color: #fff;
    background-color: #222;
    border-color: #222;
}

.allauth-form-inner-content a {
	color: #17a2b8; /* text-info */
}

/* Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 164px;
    }
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    body {
        height: calc(100vh - 116px);
    }
}

